<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.hyper9</groupId>
    <artifactId>simdk</artifactId>
    <packaging>pom</packaging>
    <name>simdk</name>
    <version>0.0.2-SNAPSHOT</version>
    <description>SimDK is a VMware vSphere4 simulator which provides vSphere4 API-compatibility for official vSphere4 clients and other applications built using the vSphere4 SDK.</description>
    <url>http://simdk.sourceforge.net/</url>
    <licenses>
        <license>
            <name>The SimDK Project License (BSD)</name>
            <url>http://simdk.svn.sourceforge.net/viewvc/simdk/trunk/src/site/resources/LICENSE.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <issueManagement>
        <system>SourceForge.net</system>
        <url>http://sourceforge.net/tracker/?group_id=308192</url>
    </issueManagement>
    <inceptionYear>2009</inceptionYear>
    <developers>
        <developer>
            <id>0</id>
            <name>Schley Andrew Kutz</name>
            <email>sakutz@gmail.com</email>
            <url>http://akutz.wordpress.com/</url>
            <organization>Hyper9</organization>
            <organizationUrl>http://www.hyper9.com/</organizationUrl>
            <roles>
                <role>Developer</role>
            </roles>
        </developer>
    </developers>
    <scm>
        <connection>scm:svn:https://simdk.svn.sourceforge.net/svnroot/simdk/trunk</connection>
        <developerConnection>scm:svn:https://simdk.svn.sourceforge.net/svnroot/simdk/trunk</developerConnection>
        <tag>HEAD</tag>
        <url>https://simdk.svn.sourceforge.net/svnroot/simdk/trunk</url>
    </scm>
    <organization>
        <name>Hyper9</name>
        <url>http://www.hyper9.com/</url>
    </organization>
    <distributionManagement>
        <repository>
            <id>maven.lostcreations.com-releases</id>
            <name>maven.lostcreations.com-releases</name>
            <url>scp://maven.lostcreations.com/home/akutz/maven.lostcreations.com/releases/</url>
        </repository>
        <snapshotRepository>
            <id>maven.lostcreations.com-snapshots</id>
            <name>maven.lostcreations.com-snapshots</name>
            <url>scp://maven.lostcreations.com/home/akutz/maven.lostcreations.com/snapshots/</url>
        </snapshotRepository>
        <site>
            <id>sourceforge.net</id>
            <name>sourceforge.net</name>
            <url>scp://shell.sourceforge.net/home/groups/s/si/simdk/htdocs</url>
        </site>
    </distributionManagement>
    <properties>
        <path.resources.generated>generated-resources</path.resources.generated>
        <path.sources.generated>generated-sources</path.sources.generated>
        <root.groupId.dot>com.hyper9</root.groupId.dot>
        <root.groupId.slash>com/hyper9</root.groupId.slash>
        <root.artifactId>simdk</root.artifactId>
        <root.packagename.dot>${root.groupId.dot}.${root.artifactId}</root.packagename.dot>
        <root.packagename.slash>${root.groupId.slash}/${root.artifactId}</root.packagename.slash>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <vmware.target.version>4.0</vmware.target.version>
        <hibernate.dialect>org.hibernate.dialect.MySQLDialect</hibernate.dialect>
        <hibernate.connection.driver_class>com.mysql.jdbc.Driver</hibernate.connection.driver_class>
        <hibernate.connection.url>jdbc:mysql://localhost/db_simdk</hibernate.connection.url>
        <hibernate.connection.username>root</hibernate.connection.username>
        <hibernate.connection.password>password</hibernate.connection.password>
        <hibernate.hbm2ddl.auto />
        <hibernate.show_sql>false</hibernate.show_sql>
    </properties>
    <modules>
        <module>codegen</module>
        <module>stubs</module>
        <module>db</module>
        <module>viexport</module>
        <module>ws</module>
        <module>dist</module>
    </modules>
    <repositories>
        <repository>
            <id>maven.lostcreations.com</id>
            <name>maven.lostcreations.com</name>
            <url>http://maven.lostcreations.com/releases/</url>
            <releases>
                <enabled>true</enabled>
                <updatePolicy>never</updatePolicy>
                <checksumPolicy>fail</checksumPolicy>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>maven.java.net-2</id>
            <name>Java.net Maven2 Repository</name>
            <url>http://download.java.net/maven/2</url>
            <releases>
                <enabled>true</enabled>
                <updatePolicy>never</updatePolicy>
                <checksumPolicy>fail</checksumPolicy>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>codehaus</id>
            <name>Codehause</name>
            <url>http://repository.codehaus.org</url>
            <releases>
                <enabled>true</enabled>
                <updatePolicy>never</updatePolicy>
                <checksumPolicy>fail</checksumPolicy>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>maven-jboss</id>
            <name>JBoss Maven2 Repository</name>
            <url>http://repository.jboss.com/maven2/</url>
            <releases>
                <enabled>true</enabled>
                <updatePolicy>never</updatePolicy>
                <checksumPolicy>fail</checksumPolicy>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>
    <pluginRepositories>
        <pluginRepository>
            <id>maven2-repository.dev.java.net</id>
            <url>http://download.java.net/maven/2/</url>
        </pluginRepository>
    </pluginRepositories>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.0.2</version>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>2.6.1</version>
                <configuration>
                    <additionalJOption>-J-Xmx1024m</additionalJOption>
                </configuration>
                <executions>
                    <execution>
                        <id>aggregate</id>
                        <goals>
                            <goal>aggregate</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
                <version>2.0.1</version>
                <dependencies>
                    <dependency>
                        <groupId>m2st</groupId>
                        <artifactId>doxia-macros</artifactId>
                        <version>1.2b</version>
                    </dependency>
                </dependencies>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <configuration>
                        <argLine>-Xmx2048m -XX:MaxPermSize=1024m</argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <version>2.2-beta-5</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>2.1</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>exec-maven-plugin</artifactId>
                    <version>1.1.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>2.1.1</version>
                    <executions>
                        <execution>
                            <id>source-jar</id>
                            <phase>package</phase>
                            <goals>
                                <goal>jar-no-fork</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>2.4.2</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>apt-maven-plugin</artifactId>
                    <version>1.0-alpha-2</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.7</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
            <version>1.2.14</version>
        </dependency>
        <dependency>
            <groupId>javax.persistence</groupId>
            <artifactId>persistence-api</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>org.hibernate</groupId>
            <artifactId>hibernate-core</artifactId>
            <version>3.3.2.GA</version>
        </dependency>
        <dependency>
            <groupId>org.hibernate</groupId>
            <artifactId>hibernate-annotations</artifactId>
            <version>3.4.0.GA</version>
        </dependency>
    </dependencies>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.sun.xml.ws</groupId>
                <artifactId>jaxws-rt</artifactId>
                <version>2.2</version>
                <exclusions>
                    <exclusion>
                        <groupId>woodstox</groupId>
                        <artifactId>wstx-asl</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>woodstox</groupId>
                <artifactId>wstx-asl</artifactId>
                <version>3.2.3</version>
            </dependency>
            <dependency>
                <groupId>com.sun.xml.ws</groupId>
                <artifactId>jaxws-tools</artifactId>
                <version>2.2</version>
            </dependency>
            <dependency>
                <groupId>commons-codec</groupId>
                <artifactId>commons-codec</artifactId>
                <version>1.4</version>
            </dependency>
            <dependency>
                <groupId>commons-logging</groupId>
                <artifactId>commons-logging</artifactId>
                <version>1.1.1</version>
            </dependency>
            <dependency>
                <groupId>commons-cli</groupId>
                <artifactId>commons-cli</artifactId>
                <version>1.2</version>
            </dependency>
            <dependency>
                <groupId>org.apache.axis</groupId>
                <artifactId>axis</artifactId>
                <version>1.4</version>
            </dependency>
            <dependency>
                <groupId>org.apache.axis</groupId>
                <artifactId>axis-jaxrpc</artifactId>
                <version>1.4</version>
            </dependency>
            <dependency>
                <groupId>org.aspectj</groupId>
                <artifactId>aspectjrt</artifactId>
                <version>1.5.4</version>
            </dependency>
            <dependency>
                <groupId>wsdl4j</groupId>
                <artifactId>wsdl4j</artifactId>
                <version>1.6.2</version>
            </dependency>
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>1.4</version>
            </dependency>
            <dependency>
                <groupId>commons-discovery</groupId>
                <artifactId>commons-discovery</artifactId>
                <version>0.4</version>
            </dependency>
            <dependency>
                <groupId>com.vmware</groupId>
                <artifactId>toolkit-api</artifactId>
                <version>4.0</version>
            </dependency>
            <dependency>
                <groupId>com.vmware</groupId>
                <artifactId>internalvim25stubs</artifactId>
                <version>4.0</version>
            </dependency>
            <dependency>
                <groupId>com.vmware</groupId>
                <artifactId>internalvim25stubs</artifactId>
                <version>4.0</version>
                <classifier>sources</classifier>
            </dependency>
            <dependency>
                <groupId>org.apache.maven</groupId>
                <artifactId>maven-plugin-api</artifactId>
                <version>2.2.1</version>
            </dependency>
            <dependency>
                <groupId>org.apache.maven</groupId>
                <artifactId>maven-core</artifactId>
                <version>2.2.1</version>
            </dependency>
            <dependency>
                <groupId>net.sf.apt-jelly</groupId>
                <artifactId>apt-jelly</artifactId>
                <version>2.3</version>
            </dependency>
            <dependency>
                <groupId>org.freemarker</groupId>
                <artifactId>freemarker</artifactId>
                <version>2.3.12</version>
            </dependency>
            <dependency>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>2.1</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>